tests/parser/fixtures/preprocessor/errors/error15.cpp
#define foo 1
#define foo
